kibana-logging-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/proxy-body-size: 10m
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/session-cookie-hash: md5
    nginx.ingress.kubernetes.io/session-cookie-name: route
  creationTimestamp: null
  generation: 1
  name: kibana-logging
  selfLink: /apis/extensions/v1beta1/namespaces//ingresses/kibana-logging
spec:
  rules:
  - host: kibana.sn1.rabbies.local
    http:
      paths:
      - backend:
          serviceName: kibana-logging
          servicePort: 5601
        path: /
status:
  loadBalancer: {}
